simplify html, and add the geek code

--- a/index.gmi
+++ b/index.gmi
@@ -1,4 +1,10 @@
-I am Alexander. I write programs.
+I am Alexander. Here's my geek code:
+
+-----BEGIN GEEK CODE BLOCK-----
+Version: 3.1
+GCS d+@ s+:+ a-- C++ UB+++(L++$) P+ L+(++$) E--- W- !N>+ o? K? w--- !O
+!M !V !PS PE Y? PGP+ t? 5? X? R?>+++ !tv b++ DI? D+ G e++ h+@ !r?>+++ !y
+-----END GEEK CODE BLOCK-----
 
 => gemini://alearx.org/project.txt	project
 => gemini://alearx.org/plan.txt		plan
