--- a/index.gmi
+++ b/index.gmi
@@ -2,7 +2,7 @@ I am Alexander. Here's my geek code:
 
 -----BEGIN GEEK CODE BLOCK-----
 Version: 3.1
-GCS d+@ s+:+ a-- C++ UB+++(L++$) P+ L+(++$) E--- W- !N>+ o? K? w--- !O
+GCS d+@ s+:- a-- C++ UB+++(L++$) P+ L+(++$) E--- W- !N>+ o? K? w--- !O
 !M !V !PS PE Y? PGP+ t? 5? X? R?>+++ !tv b++ DI? D+ G e++ h+@ !r?>+++ !y
 -----END GEEK CODE BLOCK-----
 
