--- a/index.gmi
+++ b/index.gmi
@@ -1,16 +1,18 @@
 I am Alexander.
 
+```
 -----BEGIN GEEK CODE BLOCK-----
 Version: 3.1
 GCS d+@ s+:- a-- C++ UB+++(L++$) P+ L+(++$) E--- W- !N>+ o? K? w---
 !O !M !V !PS PE Y? PGP+ t? 5? X? R?>+++ !tv b++ DI? D+ G e++ h+@
 !r?>+++ !y
 -----END GEEK CODE BLOCK-----
+```
 
-=> gemini://alearx.org/project.txt	project
-=> gemini://alearx.org/plan.txt		plan
+=> project.txt	project
+=> plan.txt	plan
 
-=> gemini://alearx.org/art/		articles
-=> gemini://alearx.org/pub/		ftp
+=> art/		articles
+=> pub/		ftp
 
-=> gemini://alearx.org/ln.gmi		links
+=> ln.gmi	links
